--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "php": "^7.2",
         "laravel/lumen-framework": "^6.0",
-        "guzzlehttp/guzzle": "~6.0"
+        "guzzlehttp/guzzle": "~6.0",
+        "firebase/php-jwt": "^5.1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "^1.4",
