--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,11 @@
     "type": "project",
     "require": {
         "php": "^7.2",
-        "laravel/lumen-framework": "^6.0",
+        "firebase/php-jwt": "^5.1.0",
         "guzzlehttp/guzzle": "~6.0",
-        "firebase/php-jwt": "^5.1.0"
+        "illuminate/redis": "6.18.1",
+        "laravel/lumen-framework": "^6.0",
+        "predis/predis": "^1.1"
     },
     "require-dev": {
         "fzaninotto/faker": "^1.4",
